# pdfviewer

./: .pylintrc  pyproject.toml
pdfviewer/: __init__.py  config.py  pdfviewer.py
